<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>astar_planner</name>
    <version>1.17.2</version>
    <description>
    A gobal planner that uses A* algorithm
    </description>
    <author>WANG SHIXIAN</author>
    <author>wangshixian922@gmail.com</author>
    <maintainer email="wangshixian922@gmail.com">WANG SHIXIAN</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>tf2_geometry_msgs</build_depend>

    <depend>angles</depend>
    <depend>base_local_planner</depend>
    <depend>costmap_2d</depend>
    <depend>eigen</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>

    <export>
        <nav_core plugin="${prefix}/astar_plugin.xml" />
    </export>
</package>


